--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require": {
         "php": ">=5.3.0",
-        "ext-mongo": "*"
+        "mongo": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
